# autoresearch

./: Dockerfile  README.md  init.sh  plan.md  prepare.py  pyproject.toml  start.sh  train.py
airgap/: airgap.conf.example  airgap.env.example
