[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Pre-staged FA3 CUDA kernels for the airgapped image build. Used by
# `kernels lock .` (writes kernels.lock) and `kernels download .` (warms
# the HF hub cache). Both repos are listed so the same image works on
# Hopper (varunneal/flash-attention-3) and Ampere (kernels-community).
[tool.kernels.dependencies]
"kernels-community/flash-attn3" = ">=0.0.0"
"varunneal/flash-attention-3"   = ">=0.0.0"
